--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Node CLI tool to export all messages of a given Rocket.Chat channel",
   "main": "index.js",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "rocketchat": "^0.57.3-alpha"
   },
   "devDependencies": {},
   "scripts": {
